<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paas.usercontrol.activity.NewClientActivity">

    <TextView
        android:text="@string/title_new"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_nome"
        android:hint="@string/hint_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_sobrenome"
        android:hint="@string/hint_sobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_email"
        android:hint="@string/hint_email"
        android:inputType="textWebEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_celular"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_senha"
        android:hint="@string/hint_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/btn_novo"
        android:onClick="cadastrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/btn_voltar"
        android:onClick="goBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
