<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paas.usercontrol.MainActivity">

    <EditText
        android:id="@+id/login_username"
        android:hint="@string/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_password"
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="loginClick"
        android:text="@string/login_button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
